# Ramirez

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  start.sh  stop.sh
backend/: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: eb23e8a7e7ac_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py  sync.py  tareas.py
backend/app/api/endpoints/: __init__.py  busqueda.py  documentos.py  highlight.py  ocr.py  reportes.py  usuarios.py
backend/app/core/: __init__.py  celery_app.py  config.py  database.py  exceptions.py  middleware.py
backend/app/models/: __init__.py  base.py  busqueda.py  codigo.py  documento.py  reporte.py  usuario.py
backend/app/schemas/: __init__.py  busqueda.py  documento.py  reporte.py  usuario.py
backend/app/services/: __init__.py  busqueda_service.py  code_extractor.py  csv_generator.py  easyocr_service.py  elasticsearch_config.py  elasticsearch_service.py  factura_processor.py  indexacion_service.py  manifiesto_processor.py  matching_service.py  ocr_extractor.py  ocr_service.py  pdf_extractor.py  pdf_highlighter.py
backend/app/tasks/: __init__.py  pdf_tasks.py
backend/scripts/: celery_flower.sh  celery_worker.sh  test_busqueda.py  test_indexacion.py  test_matching.py  test_sjg999.py
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  eslint.config.js  nginx.conf  nginx.prod.conf  package-lock.json  package.json  vite.config.ts
nginx/: nginx.conf
print-service/: install.bat  install_service.bat  print_server.py  start.bat  (+2 more)
(+83 files in other folders)
